# fcvm

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in  ISA.fods  ISA.ods  Peripherals.fods
docs/asciidoc/: ISA.adoc  Peripherals.adoc  adoc-theme.yml
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt
examples/common/inc/ex_common/: file_rom.h  print_dev.h
examples/common/src/: file_rom.c  print_dev.c
examples/hello-world/: CMakeLists.txt  hello-world.asm  main.c
inc/: busctl.h  cpu.h  cpu_instr.h  cpu_instr_descs.h  debugm.h  exc.h  intctl.h  mem.h  memctl.h  ram.h  vm.h  vm_err.h  vm_res.h  vm_types.h
inc/fcvm/: busctl.h  cpu.h  cpu_instr.h  cpu_instr_descs.h  intctl.h  memctl.h  vm.h  vm_err.h  vm_types.h
src/: busctl.c  cpu.c  cpu_instr_descs.c  debugm.h  intctl.c  main.c  mem.c  memctl.c  portability.h  ram.c  vm.c  vm_err.c
src/cpu/: cpu.c  cpu_exec.c  cpu_exec.h  cpu_instr_descs.c  cpu_stack.c  cpu_stack.h
tests/: CMakeLists.txt  busctl_test.cc  common.h  cpu_alu_test.cc  cpu_control_flow_test.cc  cpu_data_test.cc  cpu_exc_test.cc  cpu_exception_test.cc  cpu_instr_alu_test.cc  cpu_instr_data_test.cc  cpu_instr_flow_test.cc  cpu_instr_stack_test.cc  cpu_interrupt_test.cc  cpu_reset_test.cc  cpu_stack_test.cc  cpu_test.cc  fake_mem.h  fakemem_test.cc  intctl_test.cc  memctl_test.cc  vm_snapshot_test.cc  vm_state_test.cc
tests/helpers/: cpu_snapshot_step.cc
tests/progs/: CMakeLists.txt  cpu_snapshot_step.cc
tests/testcommon/: fake_mem.cc  fake_mem.h  get_random.cc  get_random.h  get_random_prog.cc  get_random_prog.h  prog_builder.cc  prog_builder.h
tools/asm-fennel/: auxm.fnl  codegen.fnl  main.fnl  opcodes.fnl
tools/asm-rust/: Cargo.toml
tools/asm-rust/src/: codegen.rs  data.rs  main.rs  parser.rs  preproc.rs  scanner.rs
tools/assembler/: auxfn.fnl  codegen.fnl  main.fnl  opcodes.fnl  parsing.fnl  preproc.fnl  scanning.fnl
